# copy-public-functions-into-header

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  main.c  readme.md
src/: copy-declarations.c  copy-declarations.h  main.c
test/: expected_output.h  source.c  source.h
tests/simple-example/: expected_output.h  source.h
